Another alignment fix

--- a/src/resources/elements/entry/entry.css
+++ b/src/resources/elements/entry/entry.css
@@ -29,7 +29,7 @@
 .entry-footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
 }
 .entry-footer-dates {
   display: inline-block;
